<resources>

    <!-- Strings used for fragments for navigation -->desarrolla la pregunta

    <string name="name">Name</string>
    <string name="data">Data</string>
    <string name="question">Question</string>
    <string name="save">Save</string>
    <string name="sure">Are you sure?</string>
    <string name="develop">Develop the question</string>
    <string name="date">Date</string>
    <string name="mail">Mail</string>
    <string name="reset">Reset</string>
    <string name="titleq">Question Title</string>
    <string name="title">Title</string>
    <string name="remove">Remove</string>
    <string name="color">Colour</string>
    <string name="clean">Clean Image</string>
    <string name="image">Image</string>
    <string name="username">User Name</string>
    <string name="add" translatable="false">+</string>

    <string name="devemail">carlosaguilaralfere@gmail.com</string>


    <string name="name_error">Error Name</string>
    <string name="devel">Developer</string>
    <string name="app_name" translatable="false">Foro de Preguntas</string>
    <string name="question_error">Error Question</string>
    <string name="colour_error">Error colour</string>
    <string name="tittle_error">Error tittle</string>
    <string name="date_error">Error date</string>
    <string name="next">Next</string>
    <string name="about" translatable="false">About AppCrud</string>
    <string name="mail_error">Error mail</string>
    <string name="ccontacto">mail</string>
    <string name="spinner" translatable="false">Spinner</string>
    <string name="datem">DD/MM/YYYY</string>
    <string name="developer" translatable="false">Carlos Aguilar</string>
    <string name="search">Search</string>
    <string name="order">Order</string>
    <string name="help">Help</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Setting</string>
    <string name="form">Form</string>
    <string name="splash" translatable="false">SplashScreen</string>
    <string name="configuration">Configuration</string>
    <string name="addspinner">Add to Spinner</string>
    <string name="error_files">Error creating files</string>
    <string name="choose_picture">Choose picture</string>
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="denied">Denied access</string>
    <string name="thereareq">There are x Questions</string>
    <string name="cancel">cancel</string>
    <string name="addd">Add</string>
    <string name="mode_spinnerr">Select mode</string>
</resources>