<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="118dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText2"
                android:layout_width="339dp"
                android:layout_height="46dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="339dp"
                android:layout_height="46dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

            <Button
                android:id="@+id/searchp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/input_fechaT"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="33dp"
                android:layout_height="46dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                app:layout_constraintEnd_toStartOf="@+id/textInputEditText2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_black_24dp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="36dp"
                android:layout_height="46dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:contentDescription="@string/spinner"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                app:srcCompat="@android:drawable/ic_menu_more" />

            <ImageView

                android:id="@+id/input_fecha"
                android:layout_width="36dp"
                android:layout_height="46dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/datem"
                app:layout_constraintEnd_toStartOf="@+id/input_fechaT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="350dp"
                android:layout_marginRight="350dp"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/input_fechaT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/datem"
                android:inputType="date"
                android:maxLines="1"
                app:layout_constraintEnd_toStartOf="@+id/searchp"
                app:layout_constraintStart_toEndOf="@+id/input_fecha"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


